--- a/src/assets/stylesheets/sections/_core-value.scss
+++ b/src/assets/stylesheets/sections/_core-value.scss
@@ -4,7 +4,7 @@
 
 .core {
   &-value {
-    margin: 35px 0;
+    margin: 35px 20px;
     width: 100%;
 
     &-list {
@@ -45,11 +45,16 @@
       @extend %relative;
       @extend %flex;
       @extend %flex-column;
-      margin: 15px 0;
-      width: 50%;
+      margin: 16px 16px 16px 0;
+      width: calc(50% - 8px);
+
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
   
       @include only-for-tablet() {
-        width: 25%
+        width: 25%;
+        margin: 0;
       }
     }
   }
