--- a/src/assets/stylesheets/sections/_notification-feature.scss
+++ b/src/assets/stylesheets/sections/_notification-feature.scss
@@ -41,6 +41,11 @@
   &-image {
     @extend %text-center;
     order: 1;
+    margin-top: 20px;
+
+    @include only-for-tablet() {
+      margin-top: 0;
+    }
   }
 
   .img-item {
